6501667 ncp/n2cp drivers should not assume a static number of crypto units 6558981 Allow Errata 175 workaround to be fully enabled/disabled 6519970 Niagara crypto providers should recognize maramba specific device compatibility properties PSARC 2007/306 Victoria Falls IO FMA 6539545 Support new VF PIU errors 6556056 DE should consume ereport.io.n2.pec.lwc PSARC 2007/117 Maramba 1u/2u Platform Support 6531673 ON support for vf processor 6491129 psrinfo -pv doesn't report correct chip info on sun4v 6530592 Topo maps for maramba 6551884 Add nxge driver support for Maramba platforms 6560113 nxge driver should send message to console & /var/adm/messages when onboard port0 or 1 is disabled 6569931 Enhance sun4v trapstat to support at least 256 CPUs FWARC 2007/237 Victoria Falls Perf Regs HV API 6562095 Maramba system panics with send_mondo_set timeout while booting 6437543 sun4v NCPU update to 256

--- a/usr/src/cmd/fm/dicts/SUN4V.po
+++ b/usr/src/cmd/fm/dicts/SUN4V.po
@@ -617,3 +617,19 @@ msgid "SUN4V-8001-5Q.impact"
 msgstr "Loss of services provided by the device\ninstances associated with this fault\n"
 msgid "SUN4V-8001-5Q.action"
 msgstr "Schedule a repair procedure to replace the affected\ndevice if necessary, or contact Sun for support.\n"
+#
+# code: SUN4V-8001-64
+# keys: fault.io.vf.ncx
+#
+msgid "SUN4V-8001-64.type"
+msgstr "Fault"
+msgid "SUN4V-8001-64.severity"
+msgstr "Critical"
+msgid "SUN4V-8001-64.description"
+msgstr "An uncorrectable problem was detected in the NCX subsystem.\n  Refer to %s for more information."
+msgid "SUN4V-8001-64.response"
+msgstr "One or more device instances may be disabled\n"
+msgid "SUN4V-8001-64.impact"
+msgstr "Loss of services provided by the device\ninstances associated with this fault\n"
+msgid "SUN4V-8001-64.action"
+msgstr "Schedule a repair procedure to replace the affected\ndevice if necessary, or contact Sun for support.\n"
