--- a/usr/src/tools/scripts/nightly.1
+++ b/usr/src/tools/scripts/nightly.1
@@ -109,7 +109,12 @@ is an
 .I env
 file that does what you want.
 .LP
-
+Like most of the other build tools in usr/src/tools, this script tends
+to change on a fairly regular basis; do not expect to be able to build
+OS/Net with a version of nightly significantly older than your source
+tree.  It has what is effectively a Consolidation Private relationship
+to other build tools and with many parts of the OS/Net makefiles,
+although it may also be used to build other consolidations.
 .LP
 .SH NIGHTLY_OPTIONS
 The environment variable NIGHTLY_OPTIONS controls the actions
@@ -510,16 +515,6 @@ safe to use.  Set this flag to 'n' to disable this test, allowing any
 version of dmake to be used.
 .RE
 .LP
-.B POST_NIGHTLY
-.RS 5
-The command specified here will be executed at the end of nightly.  The
-return status of nightly - one of "Completed", "Interrupted", or "Failed" -
-will be available in the environment variable NIGHTLY_STATUS.  Any other
-environment variables exported in the environment file or by nightly are
-available, although these are not stable, and should be checked before use.
-The command output will be appended to the mail message and log file.
-.RE
-.LP
 .B MULTI_PROTO
 .RS 5
 If "no" (the default), 
@@ -529,6 +524,49 @@ the DEBUG build will go in $ROOT and the non-DEBUG build will go in
 $ROOT-nd.  Other values will be treated as "no".  Use of the
 .B \-O
 flag forces MULTI_PROTO to "yes".
+.RE
+.LP
+.SH NIGHTLY HOOK ENVIRONMENT VARIABLES
+.LP
+Several optional environment variables may specify commands to run at
+various points during the build.  Commands specified in the hook
+variable will be run in a subshell; command output will be appended to
+the mail message and log file.  If the hook exits with a non-zero
+status, the build is aborted immediately.  Environment variables
+defined in the environment file will be available.
+.LP
+.B SYS_PRE_NIGHTLY
+.RS 5
+Run just after the workspace lock is acquired.  This is reserved for
+per-build-machine customizations and should be set only in /etc/nightly.conf
+.RE
+.LP
+.B PRE_NIGHTLY
+.RS 5
+Run just after SYS_PRE_NIGHTLY.
+.RE
+.LP
+.B PRE_BRINGOVER
+.RS 5
+Run just before bringover is started; not run if no bringover is done.
+.RE
+.LP
+.B POST_BRINGOVER
+.RS 5
+Run just after bringover completes; not run if no bringover is done.
+.RE
+.LP
+.B POST_NIGHTLY
+.RS 5
+Run after the build completes, with the return status of nightly - one
+of "Completed", "Interrupted", or "Failed" - available in the
+environment variable NIGHTLY_STATUS
+.RE
+.LP
+.B SYS_POST_NIGHTLY
+.RS 5
+This is reserved for per-build-machine customizations, and runs
+immedately after POST_NIGHTLY.
 .RE
 .LP
 .SH REALMODE ENVIRONMENT VARIABLES
@@ -566,6 +604,15 @@ is non-existent, then nightly will skip copying the packages.
 .RS 5
 Destination for sparc realmode package SUNWrmodu.
 Yes, this sparc package really is built on x86.
+.SH FILES
+.LP
+.RS 5
+/etc/nightly.conf
+.RE
+.LP
+If present, nightly executes this file just prior to executing the
+.I env
+file.  
 .SH BUILDING THE IHV WORKSPACE
 .LP
 The IHV workspace can be built with
